HelloUltraviolet/Fixtures/RejectedSource/Expressions/CastAndTransmuteExpressionsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the CastAndTransmuteExpressionsDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-2528", "diag.16.CastAndTransmuteExpressions")
